--- a/plot_PreVsPostAnalysis_DayNight_Dec2019.Rmd
+++ b/plot_PreVsPostAnalysis_DayNight_Dec2019.Rmd
@@ -30,13 +30,31 @@ SDBay.gis <- spTransform(readOGR(dsn = "GISfiles",
                          CRS("+proj=longlat +datum=WGS84"))
 
 SDBay.df <- broom::tidy(SDBay.gis)
-water.color <- "lightblue"
+
+map.west.east <- c(-117.16, -117.09)
+map.north.south <- c(32.595, 32.665)
+
+pre.95.fill <- "lightgoldenrod2"
+pre.95.color <- "lightgoldenrod3"
+pre.50.fill <- "goldenrod2"
+pre.50.color <- "goldenrod3"
+water.color <- "lavender"
+
+post.95.color <- "mediumpurple3"
+post.95.fill <- "mediumpurple2"
+post.50.color <- "purple3"
+post.50.fill <- "purple2"
+
 background.color <- "darkgray"
 eelgrass.color <- "mediumseagreen"
-post.50.color <- "blue4"
-post.95.color <- "lightcyan"
-pre.50.color <- "gold"
-pre.95.color <- "lightgoldenrod1"
+
+# water.color <- "lightblue"
+# background.color <- "darkgray"
+# eelgrass.color <- "mediumseagreen"
+# post.50.color <- "blue4"
+# post.95.color <- "lightcyan"
+# pre.50.color <- "gold"
+# pre.95.color <- "lightgoldenrod1"
 
 SDBay.eelg.2014 <- spTransform(readOGR(dsn = "GISfiles/Features",
                                        layer = "SD_Baywide_Eelgrass_2014_Final",
@@ -53,7 +71,7 @@ SDBay.eelg.2008.df <- broom::tidy(SDBay.eelg.2008)
 
 
 # internet <- F #TRUE
-save.fig <- T
+save.fig <- F
 
 # Minimum number of relocations per individual to be included in HR analysis
 min_n <- 50
@@ -180,18 +198,22 @@ p.KDE.pre.combined <- ggplot() +
   geom_polygon(data = pre.95.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = pre.95.color,
+               color = pre.95.color,
+               fill = pre.95.fill,
                alpha = 0.4) +
 
   geom_polygon(data = pre.50.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = pre.50.color,
+               color = pre.50.color,
+               fill = pre.50.fill,
                alpha = 0.6) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+    geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   facet_grid(. ~ ID) +
   facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -246,24 +268,28 @@ p.KDE.post.combined <- ggplot() +
   geom_polygon(data = post.95.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "mediumpurple1",
+               color = post.95.color, #"black",
+               fill = post.95.fill, #"mediumpurple1",
                alpha = 0.4) +
 
   geom_polygon(data = post.50.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "mediumpurple4",
+               color =  post.50.color, #"black",
+               fill = post.50.fill, #"mediumpurple4",
                alpha = 0.4) +
   geom_polygon(data = SDBay.eelg.2014.df,
                aes(x = long,
                    y = lat,
                    group = group),
-               fill = "green",
+               fill = eelgrass.color,# "green",
                alpha = 0.5) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+   geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   facet_grid(. ~ ID) +
   facet_wrap( ~ ID, nrow = 3) + 
   labs(x = "", y = "")+ 
@@ -311,23 +337,27 @@ p.KDE.pre.day <- ggplot() +
                aes(x = long,
                    y = lat,
                    group = group),
-               fill = "mediumseagreen",
+               fill = eelgrass.color, #"mediumseagreen",
                alpha = 0.5) +
   geom_polygon(data = pre.day.95.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "lightcyan",
+               color = pre.50.color, #"black",
+               fill = pre.50.fill, #"lightcyan",
                alpha = 0.6) +
 
   geom_polygon(data = pre.day.50.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "blue4",
+               color = pre.50.color, # "black",
+               fill = pre.50.fill, #"blue4",
                alpha = 0.6) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+    geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east, # c(-117.145, -117.09),
+            ylim = map.north.south) + 
   facet_grid(. ~ ID) +
   facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -371,7 +401,7 @@ pre.night.50.byID.df <- do.call(rbind, pre.night.50.byID)
 pre.night.95.byID.df <- do.call(rbind, pre.night.95.byID)
 
 
-p.KDE.pre.day.night <- ggplot() + 
+p.KDE.pre.night <- ggplot() + 
   geom_polygon(data = SDBay.df,
                aes(x = long, y = lat, group = group),
                fill = water.color,
@@ -380,37 +410,41 @@ p.KDE.pre.day.night <- ggplot() +
                aes(x = long,
                    y = lat,
                    group = group),
-               fill = "mediumseagreen",
+               fill = eelgrass.color, #"mediumseagreen",
                alpha = 0.5) +
-  geom_polygon(data = pre.day.95.byID.df,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "lightcyan",
-               alpha = 0.6) +
-
-  geom_polygon(data = pre.day.50.byID.df,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "blue4",
-               alpha = 0.6) +
+  # geom_polygon(data = pre.day.95.byID.df,
+  #              aes(x = long, y = lat,
+  #                  group = group),
+  #              color = pre.95.color, #"black",
+  #              fill = pre.95.fill, # "lightcyan",
+  #              alpha = 0.6) +
+  # 
+  # geom_polygon(data = pre.day.50.byID.df,
+  #              aes(x = long, y = lat,
+  #                  group = group),
+  #              color = pre.50.color, # "black",
+  #              fill = pre.50.fill, #"blue4",
+  #              alpha = 0.6) +
 
   geom_polygon(data = pre.night.95.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "lightpink",
+               color = pre.95.color, # "black",
+               fill = pre.95.fill, #"lightpink",
                alpha = 0.5) +
 
   geom_polygon(data = pre.night.50.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "red4",
+               color = pre.50.color, # "black",
+               fill = pre.50.fill, #"red4",
                alpha = 0.5) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   facet_grid(. ~ ID) +
   facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -423,11 +457,11 @@ p.KDE.pre.day.night <- ggplot() +
   scale_x_continuous(breaks = c(-117.14, -117.12, -117.10)) 
   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
   #                    limits = c(32.595, 32.665))
-plot(p.KDE.pre.day.night)
+plot(p.KDE.pre.night)
 
 if (save.fig)
-  ggsave(plot = p.KDE.pre.day.night,
-         filename = "figures/KDE_pre_day_night_Jan2020.png",
+  ggsave(plot = p.KDE.pre.night,
+         filename = "figures/KDE_pre_night_Jan2020.png",
          device = "png",
          dpi = 600)
 
@@ -465,22 +499,22 @@ p.KDE.post.day <- ggplot() +
   geom_polygon(data = post.day.95.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = post.95.color,
+               color = post.95.color, #"black",
+               fill = post.95.fill,
                alpha = 0.6) +
 
   geom_polygon(data = post.day.50.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = post.50.color,
+               color = post.50.color,
+               fill = post.50.fill,
                alpha = 0.6) +
   geom_polygon(data = SDBay.df,
                aes(x = long, y = lat, group = group),
                fill = "transparent", #water.color,
                color = "black") +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   facet_grid(. ~ ID) +
   facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -504,7 +538,7 @@ plot(p.KDE.post.day)
 
 ```
 
-Post period night time overlayed on top of daytime. 
+Post period night time. 
 
 ```{r}
 post.night.IDs <- post.night.byID$area$ID
@@ -521,7 +555,7 @@ post.night.95.byID <- mapply(x = area.post.night.95.byID,
 post.night.50.byID.df <- do.call(rbind, post.night.50.byID)
 post.night.95.byID.df <- do.call(rbind, post.night.95.byID)
 
-p.KDE.post.day.night <- ggplot() + 
+p.KDE.post.night <- ggplot() + 
   geom_polygon(data = SDBay.df,
                aes(x = long, y = lat, group = group),
                fill = water.color,
@@ -532,12 +566,12 @@ p.KDE.post.day.night <- ggplot() +
                    group = group),
                fill = eelgrass.color,
                alpha = 0.5) +
-  geom_polygon(data = post.day.95.byID.df,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "lightcyan",
-               alpha = 0.6) +
+  # geom_polygon(data = post.day.95.byID.df,
+  #              aes(x = long, y = lat,
+  #                  group = group),
+  #              color = post.95.color, # "black",
+  #              fill = post.95.fill, #"lightcyan",
+  #              alpha = 0.6) +
   # geom_polygon(data = KD.eachID.post.day$vert.75.df,
   #              aes(x = long, y = lat,
   #                  group = group),
@@ -545,17 +579,17 @@ p.KDE.post.day.night <- ggplot() +
   #              fill = "deepskyblue",
   #              alpha = 0.7) +
   
-  geom_polygon(data = post.day.50.byID.df,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "blue4",
-               alpha = 0.6) +
+  # geom_polygon(data = post.day.50.byID.df,
+  #              aes(x = long, y = lat,
+  #                  group = group),
+  #              color = post.50.color, # "black",
+  #              fill = post.50.fill, #"blue4",
+  #              alpha = 0.6) +
   geom_polygon(data = post.night.95.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "lightpink",
+               color = post.95.color, #"black",
+               fill = post.95.fill, #"lightpink",
                alpha = 0.5) +
   # geom_polygon(data = KD.eachID.post.night$vert.75.df,
   #              aes(x = long, y = lat,
@@ -567,11 +601,15 @@ p.KDE.post.day.night <- ggplot() +
   geom_polygon(data = post.night.50.byID.df,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "red4",
+               color = post.50.color, #"black",
+               fill = post.50.fill, #"red4",
                alpha = 0.5) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+    geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   facet_grid(. ~ ID) +
   facet_wrap( ~ ID, nrow = 3) + 
   labs(x = "", y = "")+ 
@@ -586,119 +624,123 @@ theme(panel.border = element_rect(color = "black", fill = NA),
   #                    limits = c(32.595, 32.665))
 
 if (save.fig)
-  ggsave(plot = p.KDE.post.day.night,
-         filename = "figures/KDE_post_day_night_Jan2020.png",
+  ggsave(plot = p.KDE.post.night,
+         filename = "figures/KDE_post_night_Jan2020.png",
          device = "png",
          dpi = 600)
 
-plot(p.KDE.post.day.night)
+plot(p.KDE.post.night)
 ```
 
 Make plots for all turtles, including pre and post periods.
 
 ```{r}
-
-day.vert.50 <- rbind(pre.day.50.byID.df,
-                     post.day.50.byID.df)
-day.vert.95 <- rbind(pre.day.95.byID.df,
-                     post.day.95.byID.df)
-
-night.vert.50 <- rbind(pre.night.50.byID.df,
-                     post.night.50.byID.df)
-night.vert.95 <- rbind(pre.night.95.byID.df,
-                     post.night.95.byID.df)
-
-# pre.day.vert.95 <- KD.eachID.pre.day$vert.95.df
-# pre.night.vert.95 <- KD.eachID.pre.night$vert.95.df
-# post.day.vert.95 <- KD.eachID.post.day$vert.95.df
-# post.night.vert.95 <- KD.eachID.post.night$vert.95.df
 # 
-# day.vert.95 <- rbind(pre.day.vert.95, post.day.vert.95)
-# night.vert.95 <- rbind(pre.night.vert.95, post.night.vert.95)
+# day.vert.50 <- rbind(pre.day.50.byID.df,
+#                      post.day.50.byID.df)
+# day.vert.95 <- rbind(pre.day.95.byID.df,
+#                      post.day.95.byID.df)
 # 
-# pre.day.vert.50 <- KD.eachID.pre.day$vert.50.df
-# pre.night.vert.50 <- KD.eachID.pre.night$vert.50.df
-# post.day.vert.50 <- KD.eachID.post.day$vert.50.df
-# post.night.vert.50 <- KD.eachID.post.night$vert.50.df
+# night.vert.50 <- rbind(pre.night.50.byID.df,
+#                      post.night.50.byID.df)
+# night.vert.95 <- rbind(pre.night.95.byID.df,
+#                      post.night.95.byID.df)
 # 
-# day.vert.50 <- rbind(pre.day.vert.50, post.day.vert.50)
-# night.vert.50 <- rbind(pre.night.vert.50, post.night.vert.50)
-
-p.KDE.pre.post.day.night <- ggplot() + 
-  geom_polygon(data = SDBay.df,
-               aes(x = long, y = lat, group = group),
-               fill = water.color,
-               color = "black") +
-   geom_polygon(data = SDBay.eelg.2008.df,
-               aes(x = long,
-                   y = lat,
-                   group = group),
-               fill = eelgrass.color,
-               alpha = 0.5) +
-  geom_polygon(data = day.vert.95,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "lightcyan",
-               alpha = 0.6) +
-  # geom_polygon(data = KD.eachID.post.day$vert.75.df,
-  #              aes(x = long, y = lat,
-  #                  group = group),
-  #              color = "black",
-  #              fill = "deepskyblue",
-  #              alpha = 0.7) +
-  
-  geom_polygon(data = day.vert.50,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "blue4",
-               alpha = 0.6) +
-  geom_polygon(data = night.vert.95,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "lightpink",
-               alpha = 0.5) +
-  # geom_polygon(data = KD.eachID.post.night$vert.75.df,
-  #              aes(x = long, y = lat,
-  #                  group = group),
-  #              color = "black",
-  #              fill = "indianred",
-  #              alpha = 0.3) +
-  
-  geom_polygon(data = night.vert.50,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "red4",
-               alpha = 0.5) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
-  facet_grid(. ~ ID) +
-  facet_wrap( ~ ID, nrow = 4) + 
-  labs(x = "", y = "")+ 
-theme(panel.border = element_rect(color = "black", fill = NA),
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank(),
-        panel.background = element_rect(fill = background.color,
-                                        colour = background.color),
-        axis.text.x = element_text(angle = 90, vjust = 0.5)) +
-  scale_x_continuous(breaks = c(-117.14, -117.12, -117.10)) 
-  # scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
-  #                    limits = c(32.595, 32.665))  
-  # # scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
-  #                    limits = c(-117.14, -117.085)) +
-  # scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
-  #                    limits = c(32.595, 32.655))
-
-if (save.fig)
-  ggsave(plot = p.KDE.pre.post.day.night,
-         filename = "figures/KDE_pre_post_day_night_Jan2020.png",
-         device = "png",
-         dpi = 600)
-
-plot(p.KDE.pre.post.day.night)
+# # pre.day.vert.95 <- KD.eachID.pre.day$vert.95.df
+# # pre.night.vert.95 <- KD.eachID.pre.night$vert.95.df
+# # post.day.vert.95 <- KD.eachID.post.day$vert.95.df
+# # post.night.vert.95 <- KD.eachID.post.night$vert.95.df
+# # 
+# # day.vert.95 <- rbind(pre.day.vert.95, post.day.vert.95)
+# # night.vert.95 <- rbind(pre.night.vert.95, post.night.vert.95)
+# # 
+# # pre.day.vert.50 <- KD.eachID.pre.day$vert.50.df
+# # pre.night.vert.50 <- KD.eachID.pre.night$vert.50.df
+# # post.day.vert.50 <- KD.eachID.post.day$vert.50.df
+# # post.night.vert.50 <- KD.eachID.post.night$vert.50.df
+# # 
+# # day.vert.50 <- rbind(pre.day.vert.50, post.day.vert.50)
+# # night.vert.50 <- rbind(pre.night.vert.50, post.night.vert.50)
+# 
+# p.KDE.pre.post.night <- ggplot() + 
+#   geom_polygon(data = SDBay.df,
+#                aes(x = long, y = lat, group = group),
+#                fill = water.color,
+#                color = "black") +
+#    geom_polygon(data = SDBay.eelg.2008.df,
+#                aes(x = long,
+#                    y = lat,
+#                    group = group),
+#                fill = eelgrass.color,
+#                alpha = 0.5) +
+#   # geom_polygon(data = day.vert.95,
+#   #              aes(x = long, y = lat,
+#   #                  group = group),
+#   #              color = "black",
+#   #              fill = "lightcyan",
+#   #              alpha = 0.6) +
+#   # geom_polygon(data = KD.eachID.post.day$vert.75.df,
+#   #              aes(x = long, y = lat,
+#   #                  group = group),
+#   #              color = "black",
+#   #              fill = "deepskyblue",
+#   #              alpha = 0.7) +
+#   
+#   # geom_polygon(data = day.vert.50,
+#   #              aes(x = long, y = lat,
+#   #                  group = group),
+#   #              color = "black",
+#   #              fill = "blue4",
+#   #              alpha = 0.6) +
+#   geom_polygon(data = night.vert.95,
+#                aes(x = long, y = lat,
+#                    group = group),
+#                color = "black",
+#                fill = "lightpink",
+#                alpha = 0.5) +
+#   # geom_polygon(data = KD.eachID.post.night$vert.75.df,
+#   #              aes(x = long, y = lat,
+#   #                  group = group),
+#   #              color = "black",
+#   #              fill = "indianred",
+#   #              alpha = 0.3) +
+#   
+#   geom_polygon(data = night.vert.50,
+#                aes(x = long, y = lat,
+#                    group = group),
+#                color = "black",
+#                fill = "red4",
+#                alpha = 0.5) +
+#     geom_polygon(data = SDBay.df,
+#                aes(x = long, y = lat, group = group),
+#                fill = "transparent",
+#                color = "black") +
+#   coord_map(xlim = c(-117.145, -117.09),
+#             ylim = c(32.595, 32.665)) + 
+#   facet_grid(. ~ ID) +
+#   facet_wrap( ~ ID, nrow = 4) + 
+#   labs(x = "", y = "")+ 
+# theme(panel.border = element_rect(color = "black", fill = NA),
+#         panel.grid.major = element_blank(),
+#         panel.grid.minor = element_blank(),
+#         panel.background = element_rect(fill = background.color,
+#                                         colour = background.color),
+#         axis.text.x = element_text(angle = 90, vjust = 0.5)) +
+#   scale_x_continuous(breaks = c(-117.14, -117.12, -117.10)) 
+#   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
+#   #                    limits = c(32.595, 32.665))  
+#   # # scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
+#   #                    limits = c(-117.14, -117.085)) +
+#   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
+#   #                    limits = c(32.595, 32.655))
+# 
+# if (save.fig)
+#   ggsave(plot = p.KDE.pre.post.day.night,
+#          filename = "figures/KDE_pre_post_day_night_Jan2020.png",
+#          device = "png",
+#          dpi = 600)
+# 
+# plot(p.KDE.pre.post.day.night)
 
 ```
 
@@ -728,18 +770,21 @@ p.KDE.pre.all <- ggplot() +
   geom_polygon(data = pre.daynight.95,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "lightgoldenrod1",
+               color = pre.95.color, #"black",
+               fill = pre.95.fill, #"lightgoldenrod1",
                alpha = 0.6) +
   geom_polygon(data = pre.daynight.50,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "gold",
+               color = pre.50.color, # "black",
+               fill = pre.50.fill, #"gold",
                alpha = 0.6) +
-  
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+   geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   # facet_grid(. ~ ID) +
   # facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -753,11 +798,11 @@ theme(panel.border = element_rect(color = "black", fill = NA),
   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64, 32.66),
   #                    limits = c(32.595, 32.665))
 
-if (save.fig)
-  ggsave(plot = p.KDE.pre.all,
-         filename = "figures/KDE_pre_all_Jan2020.png",
-         device = "png",
-         dpi = 600)
+# if (save.fig)
+#   ggsave(plot = p.KDE.pre.all,
+#          filename = "figures/KDE_pre_all_Jan2020.png",
+#          device = "png",
+#          dpi = 600)
 
 plot(p.KDE.pre.all)
 ```
@@ -780,33 +825,36 @@ p.KDE.pre.post.all <- ggplot() +
                    group = group),
                fill = eelgrass.color,
                alpha = 0.5) +
-  geom_polygon(data = pre.daynight.95,
+  # geom_polygon(data = pre.daynight.95,
+  #              aes(x = long, y = lat,
+  #                  group = group),
+  #              color = "black",
+  #              fill = "lightgoldenrod1",
+  #              alpha = 0.6) +
+  # geom_polygon(data = pre.daynight.50,
+  #              aes(x = long, y = lat,
+  #                  group = group),
+  #              color = "black",
+  #              fill = "gold",
+  #              alpha = 0.6) +
+  geom_polygon(data = post.daynight.95,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "lightgoldenrod1",
-               alpha = 0.6) +
-  geom_polygon(data = pre.daynight.50,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "gold",
-               alpha = 0.6) +
-     geom_polygon(data = post.daynight.95,
-               aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "lightgreen",
+               color = post.95.color, #"black",
+               fill = post.95.fill, #"lightgreen",
                alpha = 0.5) +
   geom_polygon(data = post.daynight.50,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "green1",
+               color = post.50.color, #"black",
+               fill = post.50.fill, #"green1",
                alpha = 0.5) +
-  
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+   geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   # facet_grid(. ~ ID) +
   # facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -820,11 +868,11 @@ theme(panel.border = element_rect(color = "black", fill = NA),
   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64, 32,66),
   #                    limits = c(32.595, 32.665))
 
-if (save.fig)
-  ggsave(plot = p.KDE.pre.post.all,
-         filename = "figures/KDE_pre_post_all_Jan2020.png",
-         device = "png",
-         dpi = 600)
+# if (save.fig)
+#   ggsave(plot = p.KDE.pre.post.all,
+#          filename = "figures/KDE_pre_post_all_Jan2020.png",
+#          device = "png",
+#          dpi = 600)
 
 plot(p.KDE.pre.post.all)
 ```
@@ -857,17 +905,21 @@ p.KDE.pre.DayVsNight <- ggplot() +
   geom_polygon(data = pre.95,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "lightgoldenrod1",
+               color = pre.95.color, #"black",
+               fill = pre.95.fill, #"lightgoldenrod1",
                alpha = 0.6) +
   geom_polygon(data = pre.50,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "gold",
+               color = pre.50.color, # "black",
+               fill = pre.50.fill, #"gold",
                alpha = 0.6) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   facet_grid(. ~ daynight) +
   # facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -881,11 +933,11 @@ theme(panel.border = element_rect(color = "black", fill = NA),
   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64, 32.66),
   #                    limits = c(32.595, 32.665))
 
-if (save.fig)
-  ggsave(plot = p.KDE.pre.DayVsNight,
-         filename = "figures/KDE_pre_DayVsNight_Jan2020.png",
-         device = "png",
-         dpi = 600)
+# if (save.fig)
+#   ggsave(plot = p.KDE.pre.DayVsNight,
+#          filename = "figures/KDE_pre_DayVsNight_Jan2020.png",
+#          device = "png",
+#          dpi = 600)
 
 plot(p.KDE.pre.DayVsNight)
 ```
@@ -918,17 +970,21 @@ p.KDE.post.DayVsNight <- ggplot() +
   geom_polygon(data = post.95,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "lightgreen",
+               color = post.95.color, #"black",
+               fill = post.95.fill, #"lightgreen",
                alpha = 0.6) +
   geom_polygon(data = post.50,
                aes(x = long, y = lat,
                    group = group),
-               color = "black",
-               fill = "green1",
+               color = post.50.color, #"black",
+               fill = post.50.fill, #"green1",
                alpha = 0.6) +
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
   facet_grid(. ~ daynight) +
   # facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
@@ -942,11 +998,11 @@ theme(panel.border = element_rect(color = "black", fill = NA),
   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64, 32.66),
   #                    limits = c(32.595, 32.665))
 
-if (save.fig)
-  ggsave(plot = p.KDE.post.DayVsNight,
-         filename = "figures/KDE_post_DayVsNight_Jan2020.png",
-         device = "png",
-         dpi = 600)
+# if (save.fig)
+#   ggsave(plot = p.KDE.post.DayVsNight,
+#          filename = "figures/KDE_post_DayVsNight_Jan2020.png",
+#          device = "png",
+#          dpi = 600)
 
 plot(p.KDE.post.DayVsNight)
 ```
@@ -957,6 +1013,9 @@ pre vs post vs day vs night
 all.50 <- rbind(pre.daynight.50, pre.50, post.daynight.50, post.50)
 all.95 <- rbind(pre.daynight.95, pre.95, post.daynight.95, post.95)
 
+SDBay.eelg.2008.df$period.f <- as.factor("pre")
+SDBay.eelg.2014.df$period.f <- as.factor("post")
+SDBay.eelg.df <- rbind(SDBay.eelg.2008.df, SDBay.eelg.2014.df)
 
 # UD.pre.50.latlon$daynight <- "day+night"
 # UD.pre.50.latlon$period <- "pre"
@@ -991,46 +1050,88 @@ all.50$daynight.f <- factor(all.50$daynight,
 
 all.95$daynight.f <- factor(all.95$daynight,
                             levels = c("day", "night", "day+night"))
+all.50$UD.f <- as.factor("50")
 
 all.50$period.f <- factor(all.50$period,
                           levels = c("pre", "post"))
 
+all.50$UD.period <- as.factor(paste0(all.50$period.f, all.50$UD.f))
+
 all.95$period.f <- factor(all.95$period,
                           levels = c("pre", "post"))
+all.95$UD.f <- as.factor("95")
+all.95$UD.period <- as.factor(paste0(all.95$period.f, all.95$UD.f))
+
+all. <- rbind(all.50, all.95)
 
 p.KDE.pre.post.DayVsNight <- ggplot() + 
   geom_polygon(data = SDBay.df,
                aes(x = long, y = lat, group = group),
                fill = water.color,
                color = "black") +
-
+  geom_polygon(data = SDBay.eelg.df,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = eelgrass.color,
+               alpha = 0.5) +
   geom_polygon(data = all.95,
                aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "lightgreen",
+                   group = group, 
+                   color = UD.period, 
+                   fill = UD.period),
+               #color = post.95.color,# "black",
+               #fill = post.95.fill, #"lightgreen",
                alpha = 0.6) +
   geom_polygon(data = all.50,
                aes(x = long, y = lat,
-                   group = group),
-               color = "black",
-               fill = "green1",
+                   group = group,
+                   color = UD.period, #post.50.color, #"black",
+                   fill = UD.period), #post.50.fill, #"green1",
                alpha = 0.6) +
-  
-  coord_map(xlim = c(-117.145, -117.09),
-            ylim = c(32.595, 32.665)) + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent",
+               color = "black") +
+  coord_map(xlim = map.west.east,
+            ylim = map.north.south) + 
+  # font size cannot be changed and they are waaay too big...
+  # ggsn::scalebar(#data = all.95, 
+  #                #location = "topright",
+  #                transform = TRUE,
+  #                model = "WGS84",
+  #                dist_unit = "km", 
+  #                dist = 1,
+  #                height = 0.1,
+  #                st.size = 5,
+  #                st.dist = 0.2,
+  #                x.min = -117.155,
+  #                x.max = -117.135,
+  #                y.min = 32.6,
+  #                y.max = 32.61) + 
+  #                #facet.var = c("daynight.f", "period.f"),
+  #                #facet.lev = c("day+night", "post")) +
   facet_grid(daynight.f ~ period.f) +
   # facet_wrap( ~ ID, nrow = 2) + 
   labs(x = "", y = "")+ 
-theme(panel.border = element_rect(color = "black", fill = NA),
+  scale_color_manual(values = c("post50" = post.50.color,
+                                "post95" = post.95.color,
+                                "pre50" = pre.50.color,
+                                "pre95" = pre.95.color)) + 
+  scale_fill_manual(values = c("post50" = post.50.fill,
+                                "post95" = post.95.fill,
+                                "pre50" = pre.50.fill,
+                                "pre95" = pre.95.fill)) + 
+  theme(panel.border = element_rect(color = "black", fill = NA),
         panel.grid.major = element_blank(),
         panel.grid.minor = element_blank(),
         panel.background = element_rect(fill = background.color,
                                         colour = background.color),
-        axis.text.x = element_text(angle = 90, vjust = 0.5)) +
+        axis.text.x = element_text(angle = 90, vjust = 0.5),
+        legend.position = "none") +
   scale_x_continuous(breaks = c(-117.13, -117.11, -117.09)) 
-  # scale_y_continuous(breaks = c(32.60, 32.62, 32.64, 32.66),
-  #                    limits = c(32.595, 32.665))
+# scale_y_continuous(breaks = c(32.60, 32.62, 32.64, 32.66),
+#                    limits = c(32.595, 32.665))
 
 if (save.fig)
   ggsave(plot = p.KDE.pre.post.DayVsNight,
